syntax = "proto3";
option csharp_namespace = "DocumentsService.Protos";
package DocumentSearch;
service DocumentService {
  rpc GetAll (PatientId) returns (DocumentList);
  rpc Get (DocumentId) returns (Document);
}

message Empty{}

message Document {
  string patientId = 1;
  string name = 2;
  string Id = 3;
}

message DocumentList{
    repeated Document documents = 1; 
}

message DocumentId {
  string Id = 1;
}

message PatientId {
  string Id = 1;
}

